crates/sui-adapter-transactional-tests/tests/shared/become_dynamic_object_field.exp
processed 8 tasks

init:
A: object(0,0)

task 1 'publish'. lines 9-42:
Error: warning[W09001]: unused alias
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmpDhGSEz:12:42
   │
12 │     use sui::dynamic_object_field::{add, remove};
   │                                          ^^^^^^ Unused 'use' of alias 'remove'. Consider removing it
   │
   = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmpDhGSEz:30:17
   │
30 │         let mut mut outer = Outer {id: object::new(ctx)};
   │                 ^^^
   │                 │
   │                 Unexpected 'mut'
   │                 Expected an identifier



task 2 'run'. lines 44-44:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 3 'view-object'. lines 46-46:
Error: task 3, lines 46-46. Unbound fake id 2,0

task 4 'run'. lines 48-48:
Error: INVALID TEST. Unknown object, object(2,0)

task 5 'run'. lines 50-50:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 6 'view-object'. lines 52-52:
Error: task 6, lines 52-52. Unbound fake id 5,0

task 7 'run'. lines 54-54:
Error: INVALID TEST. Unknown object, object(5,0)
